minor fixes to bib file

--- a/Paper/tracing.bib
+++ b/Paper/tracing.bib
@@ -308,13 +308,13 @@
 
 @MISC {           mitgcmWeb,
   author        = {{MIT general circulation model (MITgcm)}},
-  year          = {2006},
+  year          = {2008},
   howpublished  = {\url{http://mitgcm.org}}
 } 
 
 @MISC {           neosWeb,
   author        = {{NEOS}},
-  year          = {2006},
+  year          = {2008},
   note          = {{N}etwork {E}nhanced {O}ptimization {S}erver},
   howpublished  = {\url{http://www-neos.mcs.anl.gov/}}
 } 
@@ -322,20 +322,20 @@
 
 @MISC {           openadWeb,
   author        = {{OpenAD}},
-  year          = {2006},
+  year          = {2008},
   howpublished  = {\url{http://www.mcs.anl.gov/OpenAD}}
 } 
 
 
 @MISC {           oaWeb,
   author        = {{OpenAnalysis}},
-  year          = {2006},
+  year          = {2008},
   howpublished  = {\url{https://openanalysis.berlios.de/}}
 } 
 
 @MISC {           adicWeb,
   author        = {{ADIC}},
-  year          = {2006},
+  year          = {2008},
   howpublished  = {\url{http://www.mcs.anl.gov/adicserver}}
 } 
 
@@ -347,7 +347,7 @@
 
 @MISC {           openmpWeb,
   author        = {{OpenMP}},
-  year          = {2006},
+  year          = {2008},
   howpublished  = {\url{http://www.openmp.org}}
 } 
 
@@ -760,7 +760,7 @@ NUMBER  = "8",
 @Article{openad,
   author =       "Jean Utke and Uwe Naumann and Mike Fagan and Nathan Tallent and Michelle Strout and 
                  Patrick Heimbach and Chris Hill and Carl Wunsch",
-  title =        "OpenAD/F: A Modular, Open-Source Tool for Automatic Differentiation of {Fortran} Codes",
+  title =        "Open{AD/F}: A Modular, Open-Source Tool for Automatic Differentiation of {Fortran} Codes",
   journal =      "{ACM} Transactions on Mathematical Software",
   volume =       "34",
   number =       "4",
